# logistic_regression_cpp

./: CMakeLists.txt  README.md
docs/: DOCUMENTATION.md
examples/: example_usage.cpp
include/: DataLoader.h  LogisticRegression.h  Metrics.h  Utils.h
src/: DataLoader.cpp  LogisticRegression.cpp  Metrics.cpp  main.cpp
tests/: test_models.cpp
